# model-server

./: .env.example  .gitignore  MANIFEST.in  README.md  preload_mcp.py  preload_mcp_with_mirror.sh  pyproject.toml  run.sh
docs/: README.MD  introduction.MD
src/app/: config.py  main.py
src/app/api/: router.py
src/app/schemas/: aippt.py  tasks.py  volc.py
src/app/services/: aippt_client.py  audio_processor.py  document_parser.py  mcp_agent_manager.py  model_interactor.py  task_manager.py  volc_client.py
src/app/utils/: download_util.py  response_parser.py
src/whl/: langchain_ark-0.2.0-py3-none-any.whl
test/: README.md  test.sh
